Update styling for Project page to include video with correct margin spacing

--- a/src/Components/ImageSlider/ImageSlider.scss
+++ b/src/Components/ImageSlider/ImageSlider.scss
@@ -117,6 +117,8 @@
     transform: translateX(100%);
   }
 }
+
+
 .image-overlay{
   position: fixed;
   top: 0;
@@ -132,6 +134,12 @@
 
   figure {
     position: relative;
+    display: flex;
+    width: 90vw;
+    height: auto;
+    img {
+      object-fit: contain;
+    }
   }
 }
 @media only screen and (min-width: 601px) and (max-width: 900px) {
