--- a/src/Pages/ProjectPage/ProjectPage.scss
+++ b/src/Pages/ProjectPage/ProjectPage.scss
@@ -1,5 +1,14 @@
 #project-page{
   img { width: 100%; }
+  padding: 2rem 0;
+  width: 100%;
+  height: 100%;
+  display: grid;
+  place-items: center;
+
+}
+.non-media {
+  padding: 0 1rem;
 }
 .back-to{
   display: flex;
